# variscan

./: AUTHORS  ChangeLog  Dockerfile  INSTALL  Makefile  Makefile.win  NEWS  README.devel  README.md  autogen.sh  circle.yml  config.status  configure  configure.ac  configure.in  gdb.avb  variscan.dev  variscan.sh
GUI/: VariScanGUI.java
LastWave_2_0_4/: COPYRIGHT  INSTALL_MACINTOSH  INSTALL_UNIX  README
LastWave_2_0_4/INSTALL_CYGWIN/: .bash_profile  INSTALL  cyglocal.bat
LastWave_2_0_4/Makefiles/: .#MakeRules  MakeDefs.ansi  MakeDefs.cygwin  MakeDefs.darwin  MakeDefs.dec  MakeDefs.hp  MakeDefs.linux  MakeDefs.sg  MakeDefs.sun  MakeDefs.win32  MakeRules.sg  MakeRules.win32  Makefile  Makefile.win32  PackageList
LastWave_2_0_4/ansi/src/: ansi_audio.c  ansi_graphics.c  ansi_terminal.c
LastWave_2_0_4/java/include/: JavaTerminal.h  java_keysyms.h
LastWave_2_0_4/java/src/: JavaGraphics.java  JavaTerminal.java  java_audio.c  java_graphics.c  java_graphics_old.c  java_main.java  java_terminal.c  java_terminal_old.c
LastWave_2_0_4/kernel/include/: computer.h  event.h  gobject.h  int.h  int_fsilist.h  int_hash.h  int_history.h  int_parser.h  int_procs.h  int_streams.h  int_toplevel.h  int_value.h  int_variables.h  lastwave.h  postscript.h  terminal.h  window_manager.h  xx_audio.h  xx_graphics.h  xx_system.h  xx_terminal.h
LastWave_2_0_4/kernel/src/: color.c  commands.c  event.c  gobject.c  int_alloc.c  int_controls.c  int_error_result.c  int_eval.c  int_expr.c  int_fsilist.c  int_hash.c  int_history.c  int_listv.c  int_main.c  int_main.cc  int_misc.c  int_num.c  int_package.c  int_parser.c  int_procs.c  int_range.c  int_str.c  int_streams.c  int_toplevel.c  int_value.c  int_variable.c  postscript.c  terminal.c  window_manager.c
LastWave_2_0_4/macintosh/include/: Mac.h  MacMenu.h  MacTextWindow.h  mackeyboard.h  macwindow.h
LastWave_2_0_4/macintosh/src/: MacMenu.c  MacTextWindow.c  MacTextWindowIO.c  mac_audio.c  mac_graphics.c  mac_system.c  mac_terminal.c
LastWave_2_0_4/package_compress2d/include/: arithcode.h  bitio.h  coder.h  compress2d.h  ihisto.h  quantize.h
LastWave_2_0_4/package_compress2d/src/: arithcode.c  bitio.c  coder.c  compress2.c  compress2d_package.c  ihisto.c  quantizer.c
LastWave_2_0_4/package_dwtrans2d/include/: dwtrans2d.h  extrema2d.h  filter2d.h
LastWave_2_0_4/package_dwtrans2d/src/: chain2_alloc.c  chain2_args.c  chain2_compute.c  chain2_delete.c  chain2_direction.c  chain2_focus.c  chain2_functions.c  chain2_garbage.c  chain2_insert.c  chain2_piece.c  chain2_print.c  chain2_smooth.c  chain2_split.c  chain2_statistics.c  chain2_thresh.c  convol2.c  coordinate.c  ddecomp2.c  denoise_regular.c  denoise_utilities.c  dwtrans2_alloc.c  dwtrans2_io.c  dwtrans2d_package.c  error_recons.c  ext2_alloc.c  ext2_compute.c  ext2_copy.c  ext2_delete.c  ext2_e_io.c  ext2_io.c  ext2_normalize.c  ext2_print.c  ext2_proj.c  ext2_recons.c  ext2_relocation.c  ext2_thresh.c  filter_alloc2d.c  grad_compute.c  white_noise_remove.c
LastWave_2_0_4/package_extrema1d/include/: extrema1d.h
LastWave_2_0_4/package_extrema1d/src/: ext_alloc.c  ext_chain.c  ext_compute.c  ext_file.c  ext_graph.c  extrema1d_package.c
LastWave_2_0_4/package_image/include/: images.h
LastWave_2_0_4/package_image/src/: image_alloc.c  image_file.c  (+4 more)
LastWave_2_0_4/scripts/: startup
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: README.conf  hapmap_example.conf  hapmap_example.hapmap  maf_example.conf  maf_example.maf  mga_example.mga  xmfa_example.conf  xmfa_example.xmfa
scripts/: README.mraconf  axtcheck.pl  filter_overlaps.PLS  gff2bdf.pl  mafcheck.pl  mavfilter.PLS  mra2bed.PLS  mra2gbrowse.PLS  order_hapmap_genotypes.PLS  ped2hapmap.PLS  runMRA.PLS  startup  variscan.pkg  vs2bed.PLS  vs2gbrowse.PLS
src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  dlist.c  dlist.h  dystring.c  dystring.h  errabort.c  errabort.h  free.c  free.h  globalslinux.c  globalslinux.h  intExp.c  kxTok.c  kxTok.h  linefile.c  linefile.h  memalloc.c  memalloc.h  output.c  output.h  pop.c  pop.h  ran1.c  ran1.h  readaxt.c  readaxt.h  readhapmap.c  readhapmap.h  readmaf.c  readmaf.h  readmav.c  readmav.h  readmga.c  readmga.h  readphylip.c  readphylip.h  (+17 more)
src/.deps/: common.Po  dlist.Po  dystring.Po  errabort.Po  free.Po  intExp.Po  kxTok.Po  linefile.Po  memalloc.Po  output.Po  pop.Po  ran1.Po  readaxt.Po  readhapmap.Po  readmaf.Po  readmav.Po  readmga.Po  readphylip.Po  readxmfa.Po  statistics.Po  swcolumn.Po  swnet.Po  swpoly.Po  swref.Po  variscan.Po  window.Po
t/: Test.pm  Test.t
t/data/: SARS.conf  SARS.phy  rp49_36.12.conf  rp49_36.21.conf  rp49_36.22.conf  rp49_36.phy
(+214 files in other folders)
